--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,11 @@
+$main_color: #1eacc7;
+@mixin btn_hover {
+  &:hover {
+    background-image: none;
+    background-color: $main_color;
+  }
+}
+
 * {
     font-family: 'Roboto' sans-serif;
   }
@@ -42,13 +50,13 @@
     transform: translateY(50px);
     z-index: 5;
   
-    .subheader_logo {
+    &_logo {
       display: block;
       max-width: 100%;
       margin-top: 16px;
     }
   
-    .subheader_official {
+    &_official {
       margin-top: 6px;
       color: #ffffff;
       font-weight: 400;
@@ -56,7 +64,7 @@
       opacity: 0.5;
     }
   
-    .subheader_call {
+    &_call {
       color: #ffffff;
       font-size: 12px;
       font-weight: 300;
@@ -64,7 +72,7 @@
       text-align: right;
     }
   
-    .subheader_phone {
+    &_phone {
       display: block;
       margin-top: 8px;
       color: #ffffff;
@@ -75,7 +83,7 @@
       text-decoration: none;
     }
   
-    .subheader_btn {
+    &_btn {
       margin-top: 19px;
       width: 172px;
       height: 46px;
@@ -87,6 +95,7 @@
       font-size: 14px;
       font-weight: 400;
       text-transform: uppercase;
+      @include btn_hover
     }
   }
   
@@ -96,7 +105,7 @@
     background: url('../img/bg/uber_bg.jpg') center (center / cover) no-repeat;
     padding: 135px 0 135px 0;
   
-    .promo_header {
+    &_header {
       color: #ffffff;
       font-weight: 700;
       text-transform: uppercase;
@@ -106,7 +115,7 @@
       margin: 0;
     }
   
-    .promo_subheadr {
+    &_subheadr {
       color: #ffffff;
       font-weight: 700;
       text-transform: uppercase;
@@ -117,7 +126,7 @@
       text-align: center;
     }
   
-    .promo_descr {
+    &_descr {
       color: #ffffff;
       font-size: 18px;
       font-weight: 400;
@@ -126,7 +135,7 @@
       margin-top: 23px;
     }
   
-    .promo_btn {
+    &_btn {
       display: block;
       margin: 118px auto 0 auto;
       width: 259px;
@@ -139,13 +148,17 @@
       font-style: normal;
       font-weight: 400;
       text-transform: uppercase;
+      @include btn_hover
     }
   }
   
   /* repeater code begin*/
   
   .title {
-    margin: 70px auto 0 auto;
+    &_first {
+      margin: 70px auto 0 auto;
+    }
+    margin: 0 auto;
     width: 115px;
     height: 27px;
     background: #000000;
@@ -177,14 +190,14 @@
   /* repeater code end */
   
   .reasons {
-    .reasons_block {
+    &_block {
       display: flex;
       align-items: center;
       margin-top: 16px;
       margin-bottom: 26px;
     }
   
-    .reasons_img {
+    &_img {
       margin-right: 25px;
       width: 116px;
       height: 116px;
@@ -201,7 +214,7 @@
       }
     }
   
-    .reasons_descr {
+    &_descr {
       width: 370px;
       min-height: 150px;
       font-weight: 300;
@@ -272,6 +285,30 @@
             margin: 0 auto;
             border-radius: 100%;
             cursor: pointer;
+            &::before {
+              content: '';
+              display: block;
+              width: 14px;
+              height: 2px;
+              background-color: $main_color;
+              transition: .4s all;
+            }
+            &::after {
+              content: '';
+              position: absolute;
+              left: 50%;
+              transform: translateX(-50%);
+              display: block;
+              width: 2px;
+              height: 14px;
+              background-color: $main_color;
+              transition: .4s all;
+            }
+            &:hover {
+              &::before, &::after {
+                background-color: red;
+              }
+            }
         }
     }
   }
@@ -323,4 +360,53 @@
         text-decoration: none;
         text-transform: uppercase;
     }
+}
+
+.require {
+  padding: 68px 0 84px 0;
+  &_block {
+    margin: 33px 0;
+    &_nmb {
+      margin-bottom: 0;
+    }
+  }
+  &_title {
+    color: #1ca8c3;
+    font-weight: 400;
+    font-size: 22px;
+  }
+  &_list {
+    list-style-type: none;
+    padding-left: 50px;
+    margin-top: 20px;
+    li {
+      position: relative;
+      font-size: 17px;
+      font-weight: 300;
+      line-height: 24px;
+      margin-bottom: 10px;
+      &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: -32px;
+        top: 5px;
+        width: 21px;
+        height: 21px;
+        background: url('../icons/check_blue5.svg') center center/cover no-repeat;
+      }
+    }
+  }
+  .warning {
+    .require_title {
+      color: red;
+    }
+    .require_list {
+      li {
+        &::before {
+          background: url('../icons/check_red1.svg') center center/cover no-repeat;
+        }
+      }
+    }
+  }
 }
